Store dense IDs